ensure titles can break
on mobile, long words can create unwanted margins.
Reducing font size is good, but just in case, we ensure words automatically break with `hyphen`.

Because dictionaries only work on lowercase words, we make the titles lowercase, then capitalize them through CSS.

--- a/assets/css/releases/4.6.css
+++ b/assets/css/releases/4.6.css
@@ -412,6 +412,8 @@ h1, h2, h3, h4, h5, h6 {
     align-self: center;
     color: var(--color-godot-but-a-little-brighter);
     font-family: var(--font-family-title-alt);
+    text-transform: capitalize;
+    hyphens: auto;
   }
 }
 
